syntax = "proto3";

package proto;
import "google/api/annotations.proto";

option go_package = "customerPb";

message Region {
  string regionCode = 1;
  string region = 2;
  int32 regionId = 3;
}

message Street {

}
message Address {
  bool  defaultShipping = 1;
  bool  defaultBilling = 2;
  string firstName = 3;
  string lastName = 4;
  Region region = 5;
  string postcode = 6;
  repeated string street = 7;
  string city = 8;
  string telephone = 9;
  string countryId = 10;
}
message Customers {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  repeated Address addresses = 4;
}
message CreateCustomerRequest{
  Customers customer = 1;
  string password = 5;
}

message CreateCustomerResponse{
  int32 id = 1;
  int32 groupId = 2;
  string defaultBilling = 3;
  string defaultShipping = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string createdIn = 7;
  string email = 8;
  string firstName = 9;
  string lastName = 10;
  int32 storeId = 11;
  int32 websiteId = 12;
  int32 disableAutoGroupChange = 13;
}

message GetAccessTokenCustomerRequest {
  string username = 1;
  string password = 2;
}
message GetAccessTokenCustomerResponse{
  string accessToken = 1;
}

message  GetQuoteIdCustomerRequest {
  string tokenCustomer = 1;
}

message  GetQuoteIdCustomerResponse{
  string quoteId = 2 ;
}


service Customer {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {
    option (google.api.http) = {
      post: "/V1/customers"
      body: "*"
    };
  }
  rpc GetAccessTokenCustomer(GetAccessTokenCustomerRequest) returns (GetAccessTokenCustomerResponse) {
    option (google.api.http) = {
      post: "/V1/integration/customer/token"
      body: "*"
    };
  }
  rpc GetQuoteIdCustomer(GetQuoteIdCustomerRequest) returns (GetQuoteIdCustomerResponse) {
    option (google.api.http) = {
      post: "/rest/V1/carts/mine"
      body: "*"
    };
  }
}



