syntax = "proto3";

package proto;
import "google/api/annotations.proto";

option go_package = "shipmentPb";


message Items {
  int32 orderItemId = 1;
  int32 qty = 2;

}
message Tracks {
  string  trackNumber = 1;
  string  title = 2;
  string  carrierCode = 3;
}
message CreateShipmentRequest{
  repeated Items items = 1;
  repeated Tracks tracks = 2;
  string orderId = 3;
}

message CreateShipmentResponse{
  string shipmentId = 1;
}

service Shipment {
  rpc CreateShipment(CreateShipmentRequest) returns (CreateShipmentResponse) {
    option (google.api.http) = {
      post: "/create_shipment"
      body: "*"
    };
  }
}
